# safer-gambling-app

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.python  README.md  app.py  compose.yaml  docker-compose.yml  entrypoint.sh  game take 14.py  game_take_4.py  game_take_6.py  game_take_7.py  game_take_8.py  game_v2.1.py  game_v2.5.py  game_v2.6.py  game_v2.7.py  game_v2.8.py  game_v2.9 1.py  game_v3.0.py  gameimagefiles.rar  gameimages.rar  imagefiles.rar  imagefilesgame.rar  imagegamefiles.rar  init.sql  jest.config.js  login_ui.py  package-lock.json  package.json  pyproject.toml  requirements.txt  score.txt
flask/: Dockerfile  app.py  org_app.py  pyproject.toml  requirements.txt  test.py  wait_for_it.sh
public/: index.html
pygame/: Dockerfile  app.py  button.py  coin.py  control_popup.py  draw_hud.py  game_take_9.py  main.py  player.py  pygbag.toml  sea_monster.py
react-flask-app/: package-lock.json
src/: App.css  App.js  App.test.js  index.css  index.js
src/Components/: AuthWrapper.jsx  ButtonGroup.jsx  ConfirmDelete.jsx  EvaluationPage.jsx  Footer.jsx  GameComponent.jsx  GamePage.jsx  GetStartedPage.jsx  Header.jsx  Help.jsx  HelpModal.jsx  HelpPage.jsx  Home.jsx  LandingPage.jsx  LoadGame.jsx  Login.jsx  Navbar.jsx  ProtectedRoute.js  Questionnaire.jsx  QuizScore.jsx  SettingsModal.jsx  SignUp.jsx  TechnicalSupport.jsx
src/Styles/: EvaluationPage.css  Footer.css  GamePage.css  Header.css  HelpPage.css  Home.css  LandingPage.css  Login.css  Modals.css  Modals_old.css  Navbar.css  Questionnaire.css  QuizScore.css  SignUp.css
src/hooks/: getCookie.js  (+6 more)
(+7 files in other folders)
