[tool.poetry]
name = "safer-gambling-app"
version = "0.1.0"
description = "python environment for the backend of the-safer-gambling app"
authors = ["Oliver Altrock <oliver.altrock@fdmgroup.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.0"
Flask = {version = "^3.0.3", extras = ["async"]}
Flask-Cors = "^4.0.1"
Flask-JWT-Extended = "^4.6.0"
bcrypt = "^4.2.0"
flask-sqlalchemy = "^3.1.1"
mysqlclient = "^2.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
